fix: Remove double border on dashboard sections

--- a/src/pages/DashboardPage/components/ActiveTournament/ActiveTournament.module.scss
+++ b/src/pages/DashboardPage/components/ActiveTournament/ActiveTournament.module.scss
@@ -6,7 +6,6 @@
 
 .ActiveTournament {
   @include flex.column($gap: 0);
-  @include variants.card;
 
   overflow: hidden;
   min-height: 0;
