--- a/src/pages/DashboardPage/components/TournamentsList/TournamentsList.module.scss
+++ b/src/pages/DashboardPage/components/TournamentsList/TournamentsList.module.scss
@@ -7,7 +7,6 @@
 
 .TournamentsList {
   @include flex.column($gap: 0);
-  @include variants.card;
 
   overflow: hidden;
   min-height: 0;
